Progress made on QuestionItem

--- a/client/src/styles/general.less
+++ b/client/src/styles/general.less
@@ -3,7 +3,7 @@
   box-shadow: 0 2px 3px rgba(0, 0, 0, 0.05);
 }
 
-.notFound {
+.not-found {
   .pad-tb-6--5;
   color: @light-black-text-color;
   text-align: center;
